--- a/src/components/product-description/product-description.css
+++ b/src/components/product-description/product-description.css
@@ -9,3 +9,12 @@
 .product-description .prd-img img {
   max-width: 100%;
 }
+button{
+  color: #fff;
+  background-color: #0072bc;
+  border: 1px solid #0072bc;
+  padding: 6px 12px;
+  margin-bottom: 20px;
+  border-radius: 3px;
+  cursor: pointer;
+}
